@@ -1,2 +1,3 @@
 *.1
 *.pod
+/tmp
